@@ -1,3 +1,7 @@
+Sat Nov  7 09:43:59 1998  DanEspen  <dje@blue>
+
+	* FvwmAnimate.c: Make color a fully documented and customizable feature.
+
 1998-11-06  Paul D. Smith  <psmith@gnu.org>
 
 	* Makefile.am (FvwmAnimate_DEPENDENCIES): Add a dependency on
